# linux_apps_sdk

./: Makefile  main.c
database/: Makefile  dbase.c
inc/: common.h  sys_msg.h
reader/: Makefile  Makefile.am  reader.c  readerAPIs.c  serial_reader.c  serial_reader_l3.c  tm_reader.c  tm_reader_async.c  tmr_loadsave_configuration.c
reader/storage/: read.c
remotem/: remotem.c
system/: watchdog.c
