lib_LTLIBRARIES = libreader.la

libreader_la_SOURCES = hex_bytes.c \
					   readerAPIs.c \
					   serial_transport_posix.c \
					   tmr_loadsave_configuration.c \
					   tmr_utils.c \
					   osdep_posix.c \
					   serial_reader.c \
					   tm_reader_async.c \
					   tmr_param.c
					   read.c \
					   serial_reader_l3.c \
					   tm_reader.c \
					   tmr_strerror.c
